--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
-<div th:fragment="footer">
+<html xmlns:th="http://www.thymeleaf.org">
+
+<div class="footer" th:fragment="footer">
   <footer class="page-footer font-small cyan darken-3">
     <div class="footer-copyright text-center py-3">
-      2023 Shopping Mall Example Website
+      2020 Shopping Mall Example WebSite
     </div>
   </footer>
 </div>
+
 </html>
